--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
 	},
 	"homepage": "https://github.com/cosmicmedia/react-native-markdown-display/",
 	"dependencies": {
+		"@cosmicmedia/markdown-it": "^13.0.2",
 		"css-to-react-native": "^3.0.0",
-		"markdown-it": "^13.0.1",
 		"prop-types": "^15.8.1",
 		"react-native-fit-image": "^1.5.5",
 		"simple-markdown": "^0.7.3"
