--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@cosmicmedia/react-native-markdown-display",
-	"version": "1.1.2",
+	"version": "1.1.3",
 	"description": "Markdown renderer for react-native, with CommonMark spec support + adds syntax extensions & sugar (URL autolinking, typographer), originally created by Mient-jan Stelling as react-native-markdown-renderer",
 	"main": "src/index.js",
 	"types": "src/index.d.ts",
@@ -29,8 +29,7 @@
 		"@cosmicmedia/markdown-it": "^13.1.0",
 		"css-to-react-native": "^3.0.0",
 		"prop-types": "^15.8.1",
-		"react-native-fit-image": "^1.5.5",
-		"simple-markdown": "^0.7.3"
+		"react-native-fit-image": "^1.5.5"
 	},
 	"peerDependencies": {
 		"react": "^16.2.0 || ^18.0.0",
